[package]
name = "aoc"
version = "0.1.0"
authors = ["Makhmudov Babur <bobs4462@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version = "0.14", default-features = false, features = ['termion'] }
termion = "1.5"
lazy_static = "1.4.0"
num_cpus = "1.13"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
panic = 'abort'
